--- a/assets/css/ezdefi-qrcode.scss
+++ b/assets/css/ezdefi-qrcode.scss
@@ -215,6 +215,11 @@
       }
     }
 
+    .count-down {
+      color: #f73f2e;
+      font-weight: bold;
+    }
+
     img.qrcode {
       display: block;
       margin: 0 auto;
