--- a/assets/css/ezdefi-qrcode.css
+++ b/assets/css/ezdefi-qrcode.css
@@ -136,6 +136,7 @@
 #wc_ezdefi_qrcode .ezdefi-payment-tabs ul li {
   display: inline-block;
   margin-bottom: -1px;
+  margin-left: 0 !important;
 }
 #wc_ezdefi_qrcode .ezdefi-payment-tabs ul li.ui-tabs-active a {
   border: 1px solid rgba(0, 0, 0, 0.05);
