--- a/assets/css/ezdefi-checkout.scss
+++ b/assets/css/ezdefi-checkout.scss
@@ -1,3 +1,14 @@
+#wc-ezdefi-icon {
+  float: right;
+  margin-top: 3px;
+
+  img {
+    float: none;
+    width: 18px;
+    margin-left: 2px;
+  }
+}
+
 #wc-ezdefi-checkout {
   #wc-ezdefi-currency-select {
     font-size: 100% !important;
