--- a/assets/css/ezdefi-qrcode.scss
+++ b/assets/css/ezdefi-qrcode.scss
@@ -219,6 +219,36 @@
 
     .qrcode {
       display: inline-block;
+      position: relative;
+
+      &.expired {
+        &:before {
+          content: '';
+          position: absolute;
+          background: rgba(255,255,255,.6);
+          width: 100%;
+          height: 100%;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          z-index: 10;
+        }
+
+        &:after {
+          content: 'Expired';
+          color: #f73f2e;
+          font-weight: bold;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          z-index: 11;
+        }
+
+        img {
+          opacity: .5;
+        }
+      }
 
       img {
         display: block;
