--- a/assets/css/ezdefi-checkout.scss
+++ b/assets/css/ezdefi-checkout.scss
@@ -21,7 +21,7 @@
       margin-bottom: 10px;
 
       .currency-item {
-        border: 1px solid rgba(0, 0, 0, 0.05);
+        border: 1px solid rgba(0,0,0,.125);
         -webkit-border-radius: 4px;
         -moz-border-radius: 4px;
         border-radius: 4px;
@@ -31,7 +31,7 @@
         cursor: pointer;
 
         &:hover, &.selected {
-          border-color: #333;
+          border-color: #c3e6cb;
         }
 
         .item__logo {
@@ -71,13 +71,13 @@
     }
     //max-height: 400px;
     //overflow-y: scroll;
-    //border: 1px solid rgba(0, 0, 0, 0.05);
+    //border: 1px solid rgba(0,0,0,.125);
     //margin-bottom: 20px;
     //
     //.currency-item {
     //  display: flex;
     //  align-items: center;
-    //  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    //  border-bottom: 1px solid rgba(0,0,0,.125);
     //  padding: 10px 20px;
     //
     //  &:last-child {
