--- a/assets/css/ezdefi-checkout.css
+++ b/assets/css/ezdefi-checkout.css
@@ -27,9 +27,10 @@
   padding: 10px;
   transition: all 0.3s;
   cursor: pointer;
+  color: #212529;
 }
 #wc-wzdefi-checkout .currency-select .currency-item__wrap .currency-item:hover, #wc-wzdefi-checkout .currency-select .currency-item__wrap .currency-item.selected {
-  border-color: #c3e6cb;
+  border-color: #46b450;
 }
 #wc-wzdefi-checkout .currency-select .currency-item__wrap .currency-item .item__logo {
   margin-right: 10px;
