--- a/assets/css/ezdefi-qrcode.css
+++ b/assets/css/ezdefi-qrcode.css
@@ -311,12 +311,13 @@
 #wc_ezdefi_qrcode .ezdefi-payment .note {
   color: #f73f2e;
   font-weight: bold;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
 }
 @media screen and (max-width: 575.98px) {
   #wc_ezdefi_qrcode .ezdefi-payment .note {
     text-align: left;
     font-size: 15px;
+    margin-bottom: 0.5rem;
   }
 }
 #wc_ezdefi_qrcode .ezdefi-payment span.currency {
@@ -349,19 +350,6 @@
   100% {
     transform: rotate(360deg);
   }
-}
-
-#tiptip_holder.tip_bottom #tiptip_arrow_inner {
-  border-bottom-color: #333;
-}
-#tiptip_holder.tip_top #tiptip_arrow_inner {
-  border-top-color: #333;
-}
-#tiptip_holder #tiptip_content {
-  background: #333;
-  box-shadow: none;
-  color: #fff;
-  border: none;
 }
 
 /*# sourceMappingURL=ezdefi-qrcode.css.map */
