--- a/assets/css/ezdefi-qrcode.scss
+++ b/assets/css/ezdefi-qrcode.scss
@@ -362,11 +362,12 @@
     .note {
       color: #f73f2e;
       font-weight: bold;
-      margin-bottom: .5rem;
+      margin-bottom: 0;
 
       @media screen and (max-width: 575.98px) {
         text-align: left;
         font-size: 15px;
+        margin-bottom: .5rem;
       }
     }
 
@@ -403,24 +404,5 @@
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-  }
-}
-
-#tiptip_holder {
-  &.tip_bottom {
-    #tiptip_arrow_inner {
-      border-bottom-color: #333;
-    }
-  }
-  &.tip_top {
-    #tiptip_arrow_inner {
-      border-top-color: #333;
-    }
-  }
-  #tiptip_content {
-    background: #333;
-    box-shadow: none;
-    color: #fff;
-    border: none;
   }
 }
