--- a/assets/css/ezdefi-qrcode.css
+++ b/assets/css/ezdefi-qrcode.css
@@ -166,6 +166,7 @@
 @media screen and (max-width: 575.98px) {
   #wc_ezdefi_qrcode .ezdefi-payment {
     padding: 10px 10px 0 10px;
+    font-size: 16px;
   }
 }
 #wc_ezdefi_qrcode .ezdefi-payment .exchange {
