--- a/assets/css/ezdefi-qrcode.scss
+++ b/assets/css/ezdefi-qrcode.scss
@@ -190,6 +190,7 @@
 
     @media screen and (max-width: 575.98px) {
       padding: 10px 10px 0 10px;
+      font-size: 16px;
     }
 
     .exchange {
