fix responsive tab on qrcode page; fix currency select on qrcode page

--- a/assets/css/ezdefi-checkout.css
+++ b/assets/css/ezdefi-checkout.css
@@ -18,6 +18,12 @@
   padding: 0 5px;
   margin-bottom: 10px;
 }
+@media screen and (max-width: 575.98px) {
+  #wc-wzdefi-checkout .currency-select .currency-item__wrap {
+    width: 50%;
+    min-width: 140px;
+  }
+}
 #wc-wzdefi-checkout .currency-select .currency-item__wrap .currency-item {
   border: 1px solid rgba(0, 0, 0, 0.125);
   -webkit-border-radius: 4px;
@@ -73,6 +79,11 @@
 #wc-wzdefi-checkout .currency-select .currency-item__wrap .currency-item .item__text {
   text-align: left;
   flex-grow: 1;
+}
+@media screen and (max-width: 575.98px) {
+  #wc-wzdefi-checkout .currency-select .currency-item__wrap .currency-item .item__text {
+    font-size: 15px;
+  }
 }
 #wc-wzdefi-checkout .currency-select .currency-item__wrap .currency-item .item__text .item__info {
   flex-grow: 1;
