--- a/assets/css/ezdefi-admin.css
+++ b/assets/css/ezdefi-admin.css
@@ -3,6 +3,15 @@ form .error {
   color: #dc3232;
   display: block;
 }
+form .correct {
+  color: #567622;
+}
+form #woocommerce_ezdefi_api_key.pending {
+  background-image: url(../images/spinner-2x.gif);
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: 99% center;
+}
 form td.form-invalid .select2-selection {
   border-color: #dc3232 !important;
   box-shadow: 0 0 2px rgba(204, 0, 0, 0.8);
