--- a/assets/css/ezdefi-admin.scss
+++ b/assets/css/ezdefi-admin.scss
@@ -5,6 +5,19 @@ form {
     display: block;
   }
 
+  .correct {
+    color: #567622;
+  }
+
+  #woocommerce_ezdefi_api_key {
+    &.pending {
+      background-image: url(../images/spinner-2x.gif);
+      background-repeat: no-repeat;
+      background-size: 20px 20px;
+      background-position: 99% center;
+    }
+  }
+
   td.form-invalid {
     .select2-selection {
       border-color: #dc3232!important;
