--- a/assets/css/ezdefi-admin.scss
+++ b/assets/css/ezdefi-admin.scss
@@ -11,7 +11,7 @@ form {
 
   #woocommerce_ezdefi_api_key {
     &.pending {
-      background-image: url(../images/spinner-2x.gif);
+      background-image: url(../images/spinner-2x.gif) !important;
       background-repeat: no-repeat;
       background-size: 20px 20px;
       background-position: 99% center;
