--- a/assets/css/ezdefi-admin.css
+++ b/assets/css/ezdefi-admin.css
@@ -58,22 +58,8 @@ form #wc-ezdefi-currency-settings-table thead th.logo {
 form #wc-ezdefi-currency-settings-table thead th.name {
   min-width: 120px;
 }
-form #wc-ezdefi-currency-settings-table tbody tr.editing .view {
-  display: none;
-}
-form #wc-ezdefi-currency-settings-table tbody tr.editing .edit {
-  display: block;
-}
 form #wc-ezdefi-currency-settings-table tbody tr td {
   vertical-align: top;
-}
-form #wc-ezdefi-currency-settings-table tbody tr td .edit input, form #wc-ezdefi-currency-settings-table tbody tr td .edit select {
-  margin: 1px;
-  padding: 3px 5px;
-  height: auto;
-}
-form #wc-ezdefi-currency-settings-table tbody tr td .edit input[type=number] {
-  width: 65px;
 }
 form #wc-ezdefi-currency-settings-table tbody tr td.sortable-handle {
   cursor: move;
@@ -106,12 +92,10 @@ form #wc-ezdefi-currency-settings-table tbody tr td.name .view span {
 }
 form #wc-ezdefi-currency-settings-table tbody tr td.name .edit .select2-container {
   min-width: auto !important;
+  margin-bottom: 0;
 }
 form #wc-ezdefi-currency-settings-table tbody tr td.name .edit .select2-container .select2-selection {
   text-transform: capitalize;
-}
-form #wc-ezdefi-currency-settings-table tbody tr td.wallet .edit input {
-  width: 100%;
 }
 form #wc-ezdefi-currency-settings-table tbody tr td.wallet .checking {
   display: flex;
@@ -172,6 +156,26 @@ form #wc-ezdefi-currency-settings-table tbody tr td .view {
 }
 form #wc-ezdefi-currency-settings-table tbody tr td .edit {
   display: none;
+}
+form #wc-ezdefi-currency-settings-table tbody tr td .edit input, form #wc-ezdefi-currency-settings-table tbody tr td .edit select {
+  padding: 0px 5px;
+  height: auto;
+}
+form #wc-ezdefi-currency-settings-table tbody tr td .edit input[type=number] {
+  width: 65px;
+}
+form #wc-ezdefi-currency-settings-table tbody tr.editing .view {
+  display: none;
+}
+form #wc-ezdefi-currency-settings-table tbody tr.editing .edit {
+  display: block;
+}
+form #wc-ezdefi-currency-settings-table tbody tr.editing td.discount .edit, form #wc-ezdefi-currency-settings-table tbody tr.editing td.lifetime .edit {
+  display: flex !important;
+  align-items: center;
+}
+form #wc-ezdefi-currency-settings-table tbody tr.editing td.discount .edit span, form #wc-ezdefi-currency-settings-table tbody tr.editing td.lifetime .edit span {
+  margin-left: 2px;
 }
 
 .select2-currency {
