--- a/assets/css/ezdefi-qrcode.scss
+++ b/assets/css/ezdefi-qrcode.scss
@@ -202,6 +202,7 @@
       border: 1px solid rgba(0,0,0,.125);
       border-top: none;
       outline: none;
+      background: transparent !important;
     }
   }
 
@@ -252,6 +253,22 @@
     .qrcode {
       display: inline-block;
       position: relative;
+      text-decoration: none;
+
+      &:not(.expired) {
+        border: 1px solid rgba(0, 0, 0, 0.125);
+        padding-bottom: 12px;
+
+        &:after {
+          content: "Click to pay";
+          font-size: 14px;
+          line-height: 12px;
+          position: absolute;
+          bottom: 4px;
+          left: 50%;
+          transform: translateX(-50%);
+        }
+      }
 
       &.expired {
         &:before {
@@ -277,6 +294,7 @@
           z-index: 11;
           width: 100%;
           text-align: center;
+          font-size: 16px;
         }
 
         img {
