--- a/assets/css/ezdefi-admin.css
+++ b/assets/css/ezdefi-admin.css
@@ -2,6 +2,7 @@ form .error {
   font-size: 13px;
   color: #dc3232;
   display: block;
+  margin-top: 2px;
 }
 form .correct {
   color: #567622;
@@ -157,7 +158,8 @@ form #wc-ezdefi-currency-settings-table tbody tr td .view {
 form #wc-ezdefi-currency-settings-table tbody tr td .edit {
   display: none;
 }
-form #wc-ezdefi-currency-settings-table tbody tr td .edit input, form #wc-ezdefi-currency-settings-table tbody tr td .edit select {
+form #wc-ezdefi-currency-settings-table tbody tr td .edit input,
+form #wc-ezdefi-currency-settings-table tbody tr td .edit select {
   padding: 0px 5px;
   height: auto;
 }
@@ -170,11 +172,13 @@ form #wc-ezdefi-currency-settings-table tbody tr.editing .view {
 form #wc-ezdefi-currency-settings-table tbody tr.editing .edit {
   display: block;
 }
-form #wc-ezdefi-currency-settings-table tbody tr.editing td.discount .edit, form #wc-ezdefi-currency-settings-table tbody tr.editing td.lifetime .edit {
+form #wc-ezdefi-currency-settings-table tbody tr.editing td.discount .edit,
+form #wc-ezdefi-currency-settings-table tbody tr.editing td.lifetime .edit {
   display: flex !important;
   align-items: center;
 }
-form #wc-ezdefi-currency-settings-table tbody tr.editing td.discount .edit span, form #wc-ezdefi-currency-settings-table tbody tr.editing td.lifetime .edit span {
+form #wc-ezdefi-currency-settings-table tbody tr.editing td.discount .edit span,
+form #wc-ezdefi-currency-settings-table tbody tr.editing td.lifetime .edit span {
   margin-left: 2px;
 }
 
