--- a/assets/css/ezdefi-admin.scss
+++ b/assets/css/ezdefi-admin.scss
@@ -3,6 +3,7 @@ form {
     font-size: 13px;
     color: #dc3232;
     display: block;
+    margin-top: 2px;
   }
 
   .correct {
@@ -20,8 +21,8 @@ form {
 
   td.form-invalid {
     .select2-selection {
-      border-color: #dc3232!important;
-      box-shadow: 0 0 2px rgba(204,0,0,.8);
+      border-color: #dc3232 !important;
+      box-shadow: 0 0 2px rgba(204, 0, 0, 0.8);
     }
   }
 
@@ -30,8 +31,8 @@ form {
       display: flex;
       align-items: center;
 
-      input[type=radio] {
-        margin-top: 0!important;
+      input[type="radio"] {
+        margin-top: 0 !important;
       }
 
       span {
@@ -169,15 +170,17 @@ form {
                   animation: dot-dot-dot 1.4s linear infinite;
 
                   &:nth-child(2) {
-                    animation-delay: .2s;
+                    animation-delay: 0.2s;
                   }
 
                   &:nth-child(3) {
-                    animation-delay: .4s;
+                    animation-delay: 0.4s;
                   }
 
                   @keyframes dot-dot-dot {
-                    0%, 60%, 100% {
+                    0%,
+                    60%,
+                    100% {
                       -webkit-transform: initial;
                       -ms-transform: initial;
                       transform: initial;
@@ -208,12 +211,13 @@ form {
           .edit {
             display: none;
 
-            input, select {
+            input,
+            select {
               padding: 0px 5px;
               height: auto;
             }
 
-            input[type=number] {
+            input[type="number"] {
               width: 65px;
             }
           }
@@ -228,7 +232,8 @@ form {
             display: block;
           }
 
-          td.discount, td.lifetime {
+          td.discount,
+          td.lifetime {
             .edit {
               display: flex !important;
               align-items: center;
