--- a/assets/css/ezdefi-qrcode.scss
+++ b/assets/css/ezdefi-qrcode.scss
@@ -257,14 +257,14 @@
 
       &:not(.expired) {
         border: 1px solid rgba(0, 0, 0, 0.125);
-        padding-bottom: 12px;
 
         &:after {
-          content: "Click to pay";
+          content: "Scan QR Code or Click to pay";
           font-size: 14px;
           line-height: 12px;
           position: absolute;
-          bottom: 4px;
+          bottom: 6px;
+          width: 100%;
           left: 50%;
           transform: translateX(-50%);
         }
@@ -469,7 +469,7 @@
     .ezdefi-payment {
       .qrcode {
         &:not(.expired) {
-          padding-bottom: 12px;
+          padding: 6px 6px 18px 6px
         }
       }
     }
