--- a/assets/css/ezdefi-qrcode.scss
+++ b/assets/css/ezdefi-qrcode.scss
@@ -152,6 +152,7 @@
           padding: 10px 20px;
           display: block;
           text-decoration: none;
+          outline: none !important;
 
           @media screen and (max-width: 575.98px) {
             padding: 5px;
