--- a/assets/css/ezdefi-admin.css
+++ b/assets/css/ezdefi-admin.css
@@ -13,5 +13,11 @@ form #woocommerce_ezdefi_api_key.pending {
   background-size: 20px 20px;
   background-position: 99% center;
 }
+form #woocommerce_ezdefi_public_key.pending {
+  background-image: url(../images/spinner-2x.gif) !important;
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: 99% center;
+}
 
 /*# sourceMappingURL=ezdefi-admin.css.map */
