--- a/assets/css/ezdefi-admin.scss
+++ b/assets/css/ezdefi-admin.scss
@@ -18,4 +18,13 @@ form {
       background-position: 99% center;
     }
   }
+
+  #woocommerce_ezdefi_public_key {
+    &.pending {
+      background-image: url(../images/spinner-2x.gif) !important;
+      background-repeat: no-repeat;
+      background-size: 20px 20px;
+      background-position: 99% center;
+    }
+  }
 }
