--- a/assets/css/ezdefi-assign.css
+++ b/assets/css/ezdefi-assign.css
@@ -18,7 +18,7 @@
 }
 
 #wc-ezdefi-exception-table-filter {
-  margin-bottom: 6px;
+  margin: 6px 0;
 }
 #wc-ezdefi-exception-table-filter .filter-container {
   display: flex;
